--- a/package.json
+++ b/package.json
@@ -7,10 +7,18 @@
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5"
   },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "npm-run-all": "^4.1.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "babel":
+      "rm -rf compiled && cp -R compiling compiled && babel compiled compiled",
+    "compile": "node compiled/compiler.js helloWorld.ez",
+    "start": "npm-run-all -p babel compile"
   }
 }
