--- a/package.json
+++ b/package.json
@@ -3,22 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "parcel-bundler": "^1.9.7",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "node-sass": "^4.9.3",
     "npm-run-all": "^4.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "babel":
-      "rm -rf compiled && cp -R compiling compiled && babel compiled compiled",
+    "start": "npm-run-all -p babel compile",
+    "web": "parcel public/index.html -d functions/public",
+    "build": "rm -rf build && cp -R public build && parcel build public/index.html -d build",
+    "deploy": "yarn build && firebase deploy",
+    "babel": "rm -rf compiled && cp -R compiling compiled && babel compiled compiled",
     "compile": "node compiled/compiler.js helloWorld.ez",
-    "start": "npm-run-all -p babel compile"
+    "items": "node items/index.js"
   }
 }
