--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "my-app",
+  "name": "Ez",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.0.1",
+    "@material-ui/icons": "^3.0.1",
     "parcel-bundler": "^1.9.7",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-persist": "^5.10.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-stage-0": "^6.24.1",
     "node-sass": "^4.9.3",
-    "npm-run-all": "^4.1.3"
+    "npm-run-all": "^4.1.3",
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "start": "npm-run-all -p babel compile",
-    "web": "parcel public/index.html -d functions/public",
-    "build": "rm -rf build && cp -R public build && parcel build public/index.html -d build",
+    "debug": "react-scripts start",
+    "web": "rm -rf build && cp -R public build && parcel public/index.html -d build",
+    "build":
+      "rm -rf build && cp -R public build && parcel build public/index.html -d build",
     "deploy": "yarn build && firebase deploy",
-    "babel": "rm -rf compiled && cp -R compiling compiled && babel compiled compiled",
+    "babel":
+      "rm -rf compiled && cp -R compiling compiled && babel compiled compiled",
     "compile": "node compiled/compiler.js helloWorld.ez",
     "items": "node items/index.js"
   }
