back to react-scripts

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@material-ui/icons": "^3.0.1",
     "firebase": "^5.4.2",
     "moment": "^2.22.2",
-    "parcel-bundler": "^1.9.7",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
@@ -19,15 +18,18 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-stage-0": "^6.24.1",
-    "node-sass": "^4.9.3",
+    "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "react-scripts": "1.1.5"
   },
   "scripts": {
-    "start": "npm-run-all -p babel compile",
-    "debug": "react-scripts start",
-    "web": "rm -rf build && cp -R public build && parcel public/index.html -d build",
-    "build": "rm -rf build && cp -R public build && parcel build public/index.html -d build",
+    "build:css": "node-sass-chokidar src/ -o src/",
+		"watch:css": "node-sass-chokidar src/ -o src/ --watch --recursive",
+		"start:js": "react-scripts start",
+		"build:js": "react-scripts build",
+		"start": "npm-run-all -p build:css watch:css start:js",
+		"build": "npm-run-all -p build:css build:js",
+    "start-lan": "npm-run-all -p babel compile",
     "deploy": "yarn build && firebase deploy",
     "babel": "rm -rf compiled && cp -R compiling compiled && babel compiled compiled",
     "compile": "node compiled/compiler.js helloWorld.ez",
